Tiny shift downwards to fix bottom alignment mismatch caused by new banner type.

--- a/www/custom.css
+++ b/www/custom.css
@@ -100,5 +100,5 @@ svg text {
 
 #info_banner .box-header {
   height: 0px;
-  padding: 0px;
+  padding: 5px;
 }
